force-app/main/default/objects/Invoice__c/fields/AbacusAccountNrInvoiceReceiver__c.field-meta.xml
<CustomField>
    <fullName>AbacusAccountNrInvoiceReceiver__c</fullName>
    <formula>InvoiceReceiver__r.AbacusAccountNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Account Nr. (Invoice Receiver)</label>
    <type>Text</type>
</CustomField>