force-app/main/default/objects/Invoice__c/fields/AbacusBelegreferenz__c.field-meta.xml
<CustomField>
    <fullName>AbacusBelegreferenz__c</fullName>
    <description>ary: Feld zur Übergabe auf das Abacus Mahnformular</description>
    <formula>IF(
AND(
ISBLANK( CustomerReference__c ),
ISBLANK( CustomerOrderNr__c )
)
,&quot;&quot;,

IF(
AND(
NOT(ISBLANK( CustomerReference__c )),
NOT(ISBLANK( CustomerOrderNr__c ))
)
,LEFT(&quot;Ihre Ref: &quot;&amp;CustomerReference__c &amp;&quot; / PO-Nr.: &quot;&amp;CustomerOrderNr__c,60),

IF(
AND(
NOT(ISBLANK( CustomerReference__c )),
ISBLANK( CustomerOrderNr__c )
)
,LEFT(&quot;Ihre Ref: &quot;&amp;CustomerReference__c,60),

LEFT(&quot;PO-Nr.: &quot;&amp; CustomerOrderNr__c,60)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Belegreferenz</label>
    <type>Text</type>
</CustomField>