force-app/main/default/objects/Invoice__c/fields/AbacusInterfaceExport__c.field-meta.xml
<CustomField>
    <fullName>AbacusInterfaceExport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abacus Interface Export</label>
    <type>Checkbox</type>
</CustomField>