force-app/main/default/objects/Invoice__c/fields/AbacusInvoicePOSTotal__c.field-meta.xml
<CustomField>
    <fullName>AbacusInvoicePOSTotal__c</fullName>
    <description>05.12.2016, ary: Dieses Feld wird nicht mehr benötigt, da wir keine Unterscheidung mehr machen in Bezug auf verrechneten Umsatz und Umsatz, der ins Abacus fliesst.</description>
    <label>Abacus Invoice POS - Total</label>
    <summarizedField>InvoicePos__c.AbacusInvoicePositionAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>equals</operation>
        <value>Time,Expense,Supplier Costs</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>