force-app/main/default/objects/Invoice__c/fields/AbacusNGTransfer__c.field-meta.xml
<CustomField>
    <fullName>AbacusNGTransfer__c</fullName>
    <label>Abacus NG Transfer</label>
    <type>DateTime</type>
</CustomField>