force-app/main/default/objects/Invoice__c/fields/AbacusPaymentExportDate__c.field-meta.xml
<CustomField>
    <fullName>AbacusPaymentExportDate__c</fullName>
    <label>Abacus Payment Export Date</label>
    <type>Date</type>
</CustomField>