force-app/main/default/objects/Invoice__c/fields/AbacusStatus__c.field-meta.xml
<CustomField>
    <fullName>AbacusStatus__c</fullName>
    <formula>IF(
AND(
AbacusInterfaceExport__c = false,
ISPICKVAL( InvoiceStatus__c ,&quot;Ready&quot;)
),
&quot;READY&quot;,

IF(
AND(
AbacusInterfaceExport__c = true,
NOT(ISPICKVAL( InvoiceStatus__c ,&quot;Sent&quot;))
),
&quot;SELECTED TO TRANSFER&quot;,

IF(
AND(
AbacusInterfaceExport__c = true,
ISPICKVAL( InvoiceStatus__c ,&quot;Sent&quot;)
),
&quot;TRANSFERRED&quot;,
&quot;NO STATUS&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Status</label>
    <type>Text</type>
</CustomField>