force-app/main/default/objects/Invoice__c/fields/AbacusTransfer__c.field-meta.xml
<CustomField>
    <fullName>AbacusTransfer__c</fullName>
    <label>Abacus Transfer</label>
    <type>DateTime</type>
</CustomField>