force-app/main/default/objects/Invoice__c/fields/AbacusUebernahmeTransferiert__c.field-meta.xml
<CustomField>
    <fullName>AbacusUebernahmeTransferiert__c</fullName>
    <formula>AND(
NOT(ISNULL(AbacusTransfer__c)),
AbacusInterfaceExport__c = true,
OR(
ISPICKVAL( InvoiceStatus__c ,&quot;Ready&quot;),
ISPICKVAL( InvoiceStatus__c ,&quot;Sent&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Übernahme: Transferiert</label>
    <type>Checkbox</type>
</CustomField>