force-app/main/default/objects/Invoice__c/fields/AbacusUebernahmeVorbereitung__c.field-meta.xml
<CustomField>
    <fullName>AbacusUebernahmeVorbereitung__c</fullName>
    <formula>AND(
ISNULL(AbacusTransfer__c),
AbacusInterfaceExport__c = false,
ISPICKVAL( InvoiceStatus__c ,&quot;Ready&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Übernahme: Vorbereitung</label>
    <type>Checkbox</type>
</CustomField>