force-app/main/default/objects/Invoice__c/fields/AbacusUebernahmeVorgesehen__c.field-meta.xml
<CustomField>
    <fullName>AbacusUebernahmeVorgesehen__c</fullName>
    <formula>AND(
ISNULL(AbacusTransfer__c),
AbacusInterfaceExport__c = true,
ISPICKVAL( InvoiceStatus__c ,&quot;Ready&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Übernahme: Vorgesehen</label>
    <type>Checkbox</type>
</CustomField>