force-app/main/default/objects/Invoice__c/fields/AccountLanguage__c.field-meta.xml
<CustomField>
    <fullName>AccountLanguage__c</fullName>
    <formula>CASE(TEXT(InvoiceReceiver__r.AccountLanguage__c),
 &apos;D&apos;, &apos;DE&apos;,
 &apos;E&apos;, &apos;EN&apos;,
 &apos;F&apos;, &apos;FR&apos;,
 &apos;I&apos;, &apos;IT&apos;,
 &apos;S&apos;, &apos;ES&apos;,
      &apos;EN&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Language</label>
    <type>Text</type>
</CustomField>