force-app/main/default/objects/Invoice__c/fields/AccountNameLegal__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLegal__c</fullName>
    <label>Account Name (Legal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>