force-app/main/default/objects/Invoice__c/fields/aureiso__c.field-meta.xml
<CustomField>
    <fullName>aureiso__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>aureiso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>