force-app/main/default/objects/Invoice__c/fields/aurenetto__c.field-meta.xml
<CustomField>
    <fullName>aurenetto__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>aurenetto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>