force-app/main/default/objects/Invoice__c/fields/BankClearing__c.field-meta.xml
<CustomField>
    <fullName>BankClearing__c</fullName>
    <formula>IF(
 ProjectInvoiceCurrency__c =&quot;CHF&quot;, ProjectCostCenter__r.CHFBankClearing__c ,
IF( 
ProjectInvoiceCurrency__c =&quot;EUR&quot;, ProjectCostCenter__r.EURBankClearing__c ,
IF(
 ProjectInvoiceCurrency__c =&quot;USD&quot;, ProjectCostCenter__r.USDBankClearing__c ,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Clearing</label>
    <type>Text</type>
</CustomField>