force-app/main/default/objects/Invoice__c/fields/BankLocation__c.field-meta.xml
<CustomField>
    <fullName>BankLocation__c</fullName>
    <formula>ProjectCostCenter__r.BankLocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Location</label>
    <type>Text</type>
</CustomField>