force-app/main/default/objects/Invoice__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <formula>ProjectCostCenter__r.BankName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Name</label>
    <type>Text</type>
</CustomField>