force-app/main/default/objects/Invoice__c/fields/BillingAddressAddition__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressAddition__c</fullName>
    <label>Billing Address Addition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>