force-app/main/default/objects/Invoice__c/fields/BillingAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressCountry__c</fullName>
    <label>Billing Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>