force-app/main/default/objects/Invoice__c/fields/BillingAddressPOBox__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressPOBox__c</fullName>
    <label>Billing Address PO Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>