force-app/main/default/objects/Invoice__c/fields/BillingAddressState__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressState__c</fullName>
    <label>Billing Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>