force-app/main/default/objects/Invoice__c/fields/BillingAddressStreetNr__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressStreetNr__c</fullName>
    <label>Billing Address Street, Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>