force-app/main/default/objects/Invoice__c/fields/BillingAddressZIP__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressZIP__c</fullName>
    <label>Billing Address ZIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>