force-app/main/default/objects/Invoice__c/fields/BillingAdressCity__c.field-meta.xml
<CustomField>
    <fullName>BillingAdressCity__c</fullName>
    <label>Billing Adress City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>