force-app/main/default/objects/Invoice__c/fields/BillingNameAddition__c.field-meta.xml
<CustomField>
    <fullName>BillingNameAddition__c</fullName>
    <label>Billing Name (Addition)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>