force-app/main/default/objects/Invoice__c/fields/BillingViaCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingViaCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing via (Company)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Billing via (Company))</relationshipLabel>
    <relationshipName>InvoicesBillingViaCompany</relationshipName>
    <type>Lookup</type>
</CustomField>