force-app/main/default/objects/Invoice__c/fields/BillingViaLegalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingViaLegalCode__c</fullName>
    <label>Billing via (Legal Code)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>