force-app/main/default/objects/Invoice__c/fields/CancellationDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationDate__c</fullName>
    <inlineHelpText>Date of the corresponding Cancellation Invoice if this invoice has been cancelled</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>