force-app/main/default/objects/Invoice__c/fields/CancellationInvoiceDocumentNr__c.field-meta.xml
<CustomField>
    <fullName>CancellationInvoiceDocumentNr__c</fullName>
    <formula>CancellationInvoiceRelation__r.InvoiceDocumentNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancellation Invoice Document Nr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>