force-app/main/default/objects/Invoice__c/fields/CancellationInvoiceRelation__c.field-meta.xml
<CustomField>
    <fullName>CancellationInvoiceRelation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation - Invoice Relation</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Cancellation</relationshipLabel>
    <relationshipName>Cancellation</relationshipName>
    <type>Lookup</type>
</CustomField>