force-app/main/default/objects/Invoice__c/fields/CancellationTotalAmountNetCHF__c.field-meta.xml
<CustomField>
    <fullName>CancellationTotalAmountNetCHF__c</fullName>
    <label>Cancellation - Total Amount Net (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>