force-app/main/default/objects/Invoice__c/fields/CustomerOrderNr__c.field-meta.xml
<CustomField>
    <fullName>CustomerOrderNr__c</fullName>
    <label>Customer Order Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>