force-app/main/default/objects/Invoice__c/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <label>Customer Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>