force-app/main/default/objects/Invoice__c/fields/DynadocQRBillImage__c.field-meta.xml
<CustomField>
    <fullName>DynadocQRBillImage__c</fullName>
    <label>DynadocQRBillImage</label>
    <type>Url</type>
</CustomField>