force-app/main/default/objects/Invoice__c/fields/ESRAccountNr__c.field-meta.xml
<CustomField>
    <fullName>ESRAccountNr__c</fullName>
    <label>ESR Account Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>