force-app/main/default/objects/Invoice__c/fields/ESRAmount__c.field-meta.xml
<CustomField>
    <fullName>ESRAmount__c</fullName>
    <formula>TEXT(FLOOR( InvoiceTotalAmountGross__c )) &amp; &quot;   &quot; &amp; LPAD(TEXT(MOD(ABS(100*InvoiceTotalAmountGross__c), 100)), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESR Amount</label>
    <type>Text</type>
</CustomField>