force-app/main/default/objects/Invoice__c/fields/ESRCodeLine__c.field-meta.xml
<CustomField>
    <fullName>ESRCodeLine__c</fullName>
    <label>ESR Code Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>