force-app/main/default/objects/Invoice__c/fields/ESRFormatted__c.field-meta.xml
<CustomField>
    <fullName>ESRFormatted__c</fullName>
    <label>ESR Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>