force-app/main/default/objects/Invoice__c/fields/ESRUnformatted__c.field-meta.xml
<CustomField>
    <fullName>ESRUnformatted__c</fullName>
    <label>ESR Unformatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>