force-app/main/default/objects/Invoice__c/fields/GenerationQRBillDate__c.field-meta.xml
<CustomField>
    <fullName>GenerationQRBillDate__c</fullName>
    <description>Generated from button.</description>
    <inlineHelpText>Generated from button.</inlineHelpText>
    <label>GenerationQRBillDate</label>
    <type>DateTime</type>
</CustomField>