force-app/main/default/objects/Invoice__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <formula>IF(
 ProjectInvoiceCurrency__c =&quot;CHF&quot;, ProjectCostCenter__r.CHFIBAN__c ,
IF( 
ProjectInvoiceCurrency__c =&quot;EUR&quot;, ProjectCostCenter__r.EURIBAN__c ,
IF( 
ProjectInvoiceCurrency__c =&quot;USD&quot;, ProjectCostCenter__r.USDIBAN__c ,
IF(
 ProjectInvoiceCurrency__c =&quot;SGD&quot;, ProjectCostCenter__r.SGDIBAN__c ,
IF(
 ProjectInvoiceCurrency__c =&quot;GBP&quot;, ProjectCostCenter__r.GBPIBAN__c ,
&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>