force-app/main/default/objects/Invoice__c/fields/ILVDocumentNr__c.field-meta.xml
<CustomField>
    <fullName>ILVDocumentNr__c</fullName>
    <formula>TEXT(BillingViaCompany__r.LegalCode__c) &amp;Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILV Document Nr.</label>
    <type>Text</type>
</CustomField>