force-app/main/default/objects/Invoice__c/fields/ILVPOSTotalSupplierCost__c.field-meta.xml
<CustomField>
    <fullName>ILVPOSTotalSupplierCost__c</fullName>
    <label>ILV POS - Total Supplier Cost</label>
    <summarizedField>ILVPos__c.ILVPositionAmount__c</summarizedField>
    <summaryFilterItems>
        <field>ILVPos__c.ILVType__c</field>
        <operation>equals</operation>
        <value>SupplierCosts, LicenseDirect, LicenseProvision</value>
    </summaryFilterItems>
    <summaryForeignKey>ILVPos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>