force-app/main/default/objects/Invoice__c/fields/ILVPOSTotalSupplierCostCHF__c.field-meta.xml
<CustomField>
    <fullName>ILVPOSTotalSupplierCostCHF__c</fullName>
    <label>ILV POS - Total Supplier Cost (CHF)</label>
    <summarizedField>ILVPos__c.ILVPositionAmountCHF__c</summarizedField>
    <summaryFilterItems>
        <field>ILVPos__c.ILVType__c</field>
        <operation>equals</operation>
        <value>SupplierCosts, LicenseDirect, LicenseProvision</value>
    </summaryFilterItems>
    <summaryForeignKey>ILVPos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>