force-app/main/default/objects/Invoice__c/fields/IMG_QRBillImage__c.field-meta.xml
<CustomField>
    <fullName>IMG_QRBillImage__c</fullName>
    <formula>DynadocQRBillImage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMG_QRBillImage</label>
    <type>Text</type>
</CustomField>