force-app/main/default/objects/Invoice__c/fields/InvoiceCancelled__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCancelled__c</fullName>
    <formula>IF(
NOT(ISBLANK(CancellationDate__c)),
IMAGE(&quot;/resource/1489047009000/IconCancelled&quot;, 
&quot;Invoice Cancelled&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Cancelled</label>
    <type>Text</type>
</CustomField>