force-app/main/default/objects/Invoice__c/fields/InvoiceContact__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact (Internal)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>