force-app/main/default/objects/Invoice__c/fields/InvoiceDescription__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDescription__c</fullName>
    <label>Invoice Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>