force-app/main/default/objects/Invoice__c/fields/InvoiceDocumentNr__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocumentNr__c</fullName>
    <externalId>true</externalId>
    <label>Invoice Document Nr.</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>