force-app/main/default/objects/Invoice__c/fields/InvoiceDueDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDueDate__c</fullName>
    <formula>Case( TermsOfPayment2__c ,
&quot;1&quot;, InvoiceDate__c +30,
&quot;2&quot;, InvoiceDate__c +30,
&quot;3&quot;, InvoiceDate__c +10,
&quot;4&quot;, InvoiceDate__c +30,
&quot;5&quot;, InvoiceDate__c +60,
&quot;7&quot;, InvoiceDate__c +30,
&quot;8&quot;, InvoiceDate__c +90,
&quot;9&quot;, InvoiceDate__c +30,
&quot;10&quot;, InvoiceDate__c +15,
&quot;13&quot;, InvoiceDate__c +20,
&quot;15&quot;, InvoiceDate__c +45,
InvoiceDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>