force-app/main/default/objects/Invoice__c/fields/InvoiceILVDocumentNrSearch__c.field-meta.xml
<CustomField>
    <fullName>InvoiceILVDocumentNrSearch__c</fullName>
    <label>Invoice ILV Document Nr. (Search)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>