force-app/main/default/objects/Invoice__c/fields/InvoiceInvalid__c.field-meta.xml
<CustomField>
    <fullName>InvoiceInvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Invalid</label>
    <type>Checkbox</type>
</CustomField>