force-app/main/default/objects/Invoice__c/fields/InvoicePaymentDescription__c.field-meta.xml
<CustomField>
    <fullName>InvoicePaymentDescription__c</fullName>
    <label>Invoice Payment Description</label>
    <type>TextArea</type>
</CustomField>