force-app/main/default/objects/Invoice__c/fields/InvoicePOSTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoicePOSTotalAmountCHF__c</fullName>
    <formula>InvoicePOSTotalTimeCHF__c + InvoicePOSTotalExpenseCHF__c + InvoicePOSTotalSupplierCostCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice POS - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>