force-app/main/default/objects/Invoice__c/fields/InvoicePOSTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoicePOSTotalExpenseCHF__c</fullName>
    <label>Invoice POS - Total Expense (CHF)</label>
    <summarizedField>InvoicePos__c.InvoicePositionAmountCHF__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>