force-app/main/default/objects/Invoice__c/fields/InvoicePOSTotalTime__c.field-meta.xml
<CustomField>
    <fullName>InvoicePOSTotalTime__c</fullName>
    <label>Invoice POS - Total Time</label>
    <summarizedField>InvoicePos__c.InvoicePositionAmount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoicePos__c.PackageType__c</field>
        <operation>equals</operation>
        <value>Time</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoicePos__c.InvoiceName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>